# discord-bot-rs

./: .gitignore  README.md  cd.sh  docker-compose.yml  justfile  run.sh
crates/discord-bot/: Cargo.toml
crates/discord-bot/src/: config.rs  main.rs  messages.rs  reporter.rs  send_images.rs  stat.rs  storage.rs  util.rs
crates/kc/: Cargo.toml
crates/kc-ingester/: Cargo.toml
crates/kc-ingester/src/: main.rs
crates/kc/src/: lib.rs
crates/kemono/: Cargo.toml
crates/kemono-ingester/: Cargo.toml
crates/kemono-ingester/src/: main.rs
crates/kemono/src/: lib.rs
crates/shutdown-utils/: Cargo.toml
crates/shutdown-utils/src/: lib.rs
crates/telegram/: Cargo.toml
crates/telegram-bot/: Cargo.toml
crates/telegram-bot/src/: main.rs
crates/telegram/src/: lib.rs
