[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
eyre = "0.6.12"
kemono = { path = "../kemono" }
ollama-rs = "0.2.6"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
telegram = { path = "../telegram" }
tokio = { version = "1.0", features = ["full"] }
unicode-segmentation = "1.10.0"
