[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
eyre = "0.6.12"
kc = { path = "../kc" }
ollama-rs = "0.2.6"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shutdown-utils = { path = "../shutdown-utils" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1.10.0"
uuid = { version = "1", features = ["v4"] }
