[package]
name = "kemono-ingester"
version = "0.1.0"
edition = "2021"

[dependencies]
kc = { path = "../kc" }
notify = "6.0"
shutdown-utils = { path = "../shutdown-utils" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
