[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
kc = { path = "../kc" }
regex = "1.11.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
shutdown-utils = { path = "../shutdown-utils" }
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
