[package]
name = "telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
kc = { path = "../kc" }
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
